add MinIO uploading and getting pics
