# solution/internal/infrastructure/db/sqlc/storage/campaigns.sql.go
@@ -1,6 +1,6 @@
 // Code generated by sqlc. DO NOT EDIT.
 // versions:
-//   sqlc v1.27.0
+//   sqlc v1.28.0
 // source: campaigns.sql
 
 package storage
@@ -26,7 +26,7 @@ INSERT INTO campaigns (
     $6::varchar, $7::varchar,
     $8::int, $9::int
 )
-RETURNING id, advertiser_id, impressions_limit, clicks_limit, cost_per_impression, cost_per_click, ad_title, ad_text, start_date, end_date
+RETURNING id, advertiser_id, impressions_limit, clicks_limit, cost_per_impression, cost_per_click, ad_title, ad_text, start_date, end_date, pic_id
 `
 
 type CreateCampaignParams struct {
@@ -65,6 +65,7 @@ func (q *Queries) CreateCampaign(ctx context.Context, arg CreateCampaignParams) 
 		&i.AdText,
 		&i.StartDate,
 		&i.EndDate,
+		&i.PicID,
 	)
 	return i, err
 }
@@ -122,8 +123,20 @@ func (q *Queries) DeleteCampaignByID(ctx context.Context, campaignID uuid.UUID) 
 	return err
 }
 
+const getCampaignPicID = `-- name: GetCampaignPicID :one
+SELECT pic_id FROM campaigns
+WHERE id = $1::uuid
+`
+
+func (q *Queries) GetCampaignPicID(ctx context.Context, campaignID uuid.UUID) (pgtype.Text, error) {
+	row := q.db.QueryRow(ctx, getCampaignPicID, campaignID)
+	var pic_id pgtype.Text
+	err := row.Scan(&pic_id)
+	return pic_id, err
+}
+
 const getCampaignWithTargetingByID = `-- name: GetCampaignWithTargetingByID :one
-SELECT campaigns.id, advertiser_id, impressions_limit, clicks_limit, cost_per_impression, cost_per_click, ad_title, ad_text, start_date, end_date, campaigns_targeting.id, campaign_id, gender, age_from, age_to, location FROM campaigns JOIN campaigns_targeting ON campaigns.id = campaigns_targeting.campaign_id
+SELECT campaigns.id, advertiser_id, impressions_limit, clicks_limit, cost_per_impression, cost_per_click, ad_title, ad_text, start_date, end_date, pic_id, campaigns_targeting.id, campaign_id, gender, age_from, age_to, location FROM campaigns JOIN campaigns_targeting ON campaigns.id = campaigns_targeting.campaign_id
 WHERE campaigns.id = $1::uuid
 `
 
@@ -138,6 +151,7 @@ type GetCampaignWithTargetingByIDRow struct {
 	AdText            string
 	StartDate         int32
 	EndDate           int32
+	PicID             pgtype.Text
 	ID_2              uuid.UUID
 	CampaignID        uuid.UUID
 	Gender            pgtype.Text
@@ -160,6 +174,7 @@ func (q *Queries) GetCampaignWithTargetingByID(ctx context.Context, campaignID u
 		&i.AdText,
 		&i.StartDate,
 		&i.EndDate,
+		&i.PicID,
 		&i.ID_2,
 		&i.CampaignID,
 		&i.Gender,
@@ -171,7 +186,7 @@ func (q *Queries) GetCampaignWithTargetingByID(ctx context.Context, campaignID u
 }
 
 const getCampaignsWithTargetingByAdvertiserID = `-- name: GetCampaignsWithTargetingByAdvertiserID :many
-SELECT campaigns.id, advertiser_id, impressions_limit, clicks_limit, cost_per_impression, cost_per_click, ad_title, ad_text, start_date, end_date, campaigns_targeting.id, campaign_id, gender, age_from, age_to, location FROM campaigns JOIN campaigns_targeting ON campaigns.id = campaigns_targeting.campaign_id
+SELECT campaigns.id, advertiser_id, impressions_limit, clicks_limit, cost_per_impression, cost_per_click, ad_title, ad_text, start_date, end_date, pic_id, campaigns_targeting.id, campaign_id, gender, age_from, age_to, location FROM campaigns JOIN campaigns_targeting ON campaigns.id = campaigns_targeting.campaign_id
 WHERE advertiser_id = $3::uuid
 LIMIT $1 OFFSET $2
 `
@@ -193,6 +208,7 @@ type GetCampaignsWithTargetingByAdvertiserIDRow struct {
 	AdText            string
 	StartDate         int32
 	EndDate           int32
+	PicID             pgtype.Text
 	ID_2              uuid.UUID
 	CampaignID        uuid.UUID
 	Gender            pgtype.Text
@@ -221,6 +237,7 @@ func (q *Queries) GetCampaignsWithTargetingByAdvertiserID(ctx context.Context, a
 			&i.AdText,
 			&i.StartDate,
 			&i.EndDate,
+			&i.PicID,
 			&i.ID_2,
 			&i.CampaignID,
 			&i.Gender,
@@ -238,6 +255,24 @@ func (q *Queries) GetCampaignsWithTargetingByAdvertiserID(ctx context.Context, a
 	return items, nil
 }
 
+const setCampaignPicture = `-- name: SetCampaignPicture :exec
+UPDATE campaigns
+SET
+    pic_id = $1::varchar
+WHERE
+    id = $2::uuid
+`
+
+type SetCampaignPictureParams struct {
+	PictureID  string
+	CampaignID uuid.UUID
+}
+
+func (q *Queries) SetCampaignPicture(ctx context.Context, arg SetCampaignPictureParams) error {
+	_, err := q.db.Exec(ctx, setCampaignPicture, arg.PictureID, arg.CampaignID)
+	return err
+}
+
 const updateCampaign = `-- name: UpdateCampaign :one
 UPDATE campaigns
 SET
@@ -247,7 +282,7 @@ SET
     start_date = $7::int, end_date = $8::int
 WHERE
     id = $9::uuid
-RETURNING id, advertiser_id, impressions_limit, clicks_limit, cost_per_impression, cost_per_click, ad_title, ad_text, start_date, end_date
+RETURNING id, advertiser_id, impressions_limit, clicks_limit, cost_per_impression, cost_per_click, ad_title, ad_text, start_date, end_date, pic_id
 `
 
 type UpdateCampaignParams struct {
@@ -286,6 +321,7 @@ func (q *Queries) UpdateCampaign(ctx context.Context, arg UpdateCampaignParams) 
 		&i.AdText,
 		&i.StartDate,
 		&i.EndDate,
+		&i.PicID,
 	)
 	return i, err
 }
